# jepa-research

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_OVERVIEW_VI.md  cai_jepa_paper_proposal.md  diagnostic_implementation_plan_v2.md
diagnosis/: .gitignore  README.md  RUNBOOK.md  pyproject.toml
diagnosis/checkpoints/: mdn_dino_wm_metaworld_K1.pt  object_dynamics_dino_wm_droid.pt  object_dynamics_dino_wm_metaworld.pt  object_dynamics_jepa_wm_metaworld.pt  object_probe_dino_wm_metaworld.pt  object_probe_jepa_wm_metaworld.pt
diagnosis/configs/: diagnostic_droid.yaml  diagnostic_franka_custom.yaml  diagnostic_metaworld.yaml  diagnostic_point_maze.yaml  diagnostic_pusht.yaml  diagnostic_robocasa.yaml  diagnostic_wall.yaml
diagnosis/data/: __init__.py  latent_cache.py  loaders.py
diagnosis/docs/: CLAIMS_EVIDENCE.md  DATASET_COVERAGE_AUDIT.md  DIAGNOSIS_PLAN.md  FIX_C1_EXPLAINER.md  HANDOFF.md  HANDOFF_BOUNDARY_FIX.md  HANDOFF_DROID.md  METHODOLOGY.md  PAPER_IDEA.md  PROGRESS_REPORT.md
diagnosis/metrics/: __init__.py  action_score.py  aug.py  bootstrap.py  boundary_blindness.py  cra.py  ctd.py  distances.py  ecs.py  negative_samplers.py
diagnosis/planning/: cem_planner.py
diagnosis/results/: boundary_gate_report.md  closed_loop_report.md  decision_report.md  droid_boundary.csv  droid_boundary_dynamics.csv  droid_diagnostic.csv  droid_planning_bounded.csv  droid_planning_bounded_pertrans.npz  droid_planning_safe.csv  droid_planning_safe_pertrans.npz  droid_planning_smoke_pertrans.npz  metaworld_boundary.csv  metaworld_boundary_dynamics.csv  metaworld_boundary_fix.csv  (+18 more)
(+81 files in other folders)
