[project]
name = "cai-jepa-diagnosis"
version = "0.1.0"
description = "Action-grounding diagnostic for pretrained JEPA world models (CAI-JEPA go/no-go validation)."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "h5py>=3.10",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "huggingface-hub>=0.23",
    "Pillow>=10.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "einops>=0.7",
]

[project.optional-dependencies]
metaworld = ["metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@master"]
faiss = ["faiss-cpu>=1.7"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "models.adapters", "metrics", "stratification", "data"]
